✨ Add news exercises

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 03-print.playground/playground.xcworkspace
 04-numbers.playground/playground.xcworkspace
 05-floats-doubles.playground/playground.xcworkspace
+06-literal-numbers.playground/playground.xcworkspace
+07-casting.playground/playground.xcworkspace
+08-type-alias.playground/playground.xcworkspace
+09-booleans.playground/playground.xcworkspace
+10-tuplas.playground/playground.xcworkspace
+11-optional.playground/playground.xcworkspace
