✨ Add news exercises

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 09-booleans.playground/playground.xcworkspace
 10-tuplas.playground/playground.xcworkspace
 11-optional.playground/playground.xcworkspace
+12-force-unwrapping.playground/playground.xcworkspace
+13-optional-binding.playground/playground.xcworkspace
+14-unwrap-implicito.playground/playground.xcworkspace
+15-try-catch.playground/playground.xcworkspace
