--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 13-optional-binding.playground/playground.xcworkspace
 14-unwrap-implicito.playground/playground.xcworkspace
 15-try-catch.playground/playground.xcworkspace
+16-aserciones-precondiciones.playground/playground.xcworkspace
