✨ Add new exercises

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 14-unwrap-implicito.playground/playground.xcworkspace
 15-try-catch.playground/playground.xcworkspace
 16-aserciones-precondiciones.playground/playground.xcworkspace
+17-operations.playground/playground.xcworkspace
